done, watch image issue on narrow screens

--- a/style.scss
+++ b/style.scss
@@ -262,34 +262,36 @@ a{
 }
 // footer
 .footer{
-    
+   
     background: #000;
     color: #8a8a8a;
     font-size: 14px;
-    padding: 30px 0 20px;
+    // padding: 30px 0 20px;
     p{
         color: #8a8a8a;
     }
     h3{
         color: #fff;
-        margin-bottom: 20px;
+        margin: 20px 0;
     }
     .col-1,.col-2,.col-3,.col-4{
         min-width: 250px;
-        margin-bottom: 20px;
+        margin-bottom: 50px;
     }
     .col-1{
         flex-basis: 30%;
+        width: 240px;
     }
     .col-2{
         flex:1;
         text-align: center;
         img{
             width: 180px;
-            margin-top: 10px;
+            // margin-top: 10px;
             max-height: 100%;
-            // margin-bottom: 20px;
+            padding: 0;
         }
+    }
     .col-3, .col-4{
         flex-basis: 12%;
         text-align: center;
@@ -297,6 +299,76 @@ a{
             list-style-type: none;
         }
     }
+hr{
+    background: #b5b5b5;
+    border:none;
+    height: 1px;
+    margin:20px 50px ;
+}
+.copyright{
+    text-align: center;
+    padding-bottom: 50px;
+}
+}
+.app-logo{
+    margin-top: 20px;
+    img{
+        width: 140px;
     }
+}
+.menu-icon{
+    margin-left:20px;
+    width: 28px;
+    display: none;
+}
+// media query for menu
 
+@media only screen and (max-width: 800px) {
+    .menu-icon{
+        display: block;
+    }
+    nav ul{
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background: #333;
+        width: 100%;
+        overflow: hidden;
+        transition: max-height 0.5s;
+        li{
+            display: block;
+            margin-right: 50px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        & a{
+            // background-color: ;
+            color: #fff;
+        }
+    }
+}
+// media query for less than 600 screen size
+@media only screen and (max-width: 600px){
+    .small-container{
+
+        text-align: center;
+         .row, .row2{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            .col-1,.col-2,.col-3,.col-4{
+            flex-basis: 100%;
+            // padding: 0;
+            & .offer-img{
+               padding: 0;
+            }
+            }
+        }
+    }
+    .testimonial .row2{
+        margin: 20px 0;
+        & .col-3{
+            margin: 20px 0;
+        }
+    }
 }
